# Qt_Osciloscope

./: CMakeLists.txt  README.md
include/: MainWindow.h  OscilloscopeView.h  SerialReader.h
src/: MainWindow.cpp  OscilloscopeView.cpp  SerialReader.cpp
